; ModuleID = '/home/carl/AnghaBench/libgit2/tests/ignore/extr_path.c_test_ignore_path__more_starstar_cases.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/ignore/extr_path.c_test_ignore_path__more_starstar_cases.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"attr/.gitignore\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"attr/dir/.gitignore\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"sub/**/*.html\0A\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"aaa.html\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"dir\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"dir/sub\00", align 1
@.str.6 = private unnamed_addr constant [22 x i8] c"dir/sub/sub2/aaa.html\00", align 1
@.str.7 = private unnamed_addr constant [17 x i8] c"dir/sub/aaa.html\00", align 1
@.str.8 = private unnamed_addr constant [13 x i8] c"dir/aaa.html\00", align 1
@.str.9 = private unnamed_addr constant [4 x i8] c"sub\00", align 1
@.str.10 = private unnamed_addr constant [13 x i8] c"sub/aaa.html\00", align 1
@.str.11 = private unnamed_addr constant [18 x i8] c"sub/sub2/aaa.html\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_ignore_path__more_starstar_cases() #0 {
  %1 = call i32 @p_unlink(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @cl_must_pass(i32 %1)
  %3 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @assert_is_ignored(i32 0, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %5 = call i32 @assert_is_ignored(i32 0, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0))
  %6 = call i32 @assert_is_ignored(i32 0, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0))
  %7 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.6, i64 0, i64 0))
  %8 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.7, i64 0, i64 0))
  %9 = call i32 @assert_is_ignored(i32 0, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0))
  %10 = call i32 @assert_is_ignored(i32 0, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.9, i64 0, i64 0))
  %11 = call i32 @assert_is_ignored(i32 0, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.10, i64 0, i64 0))
  %12 = call i32 @assert_is_ignored(i32 0, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.11, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_unlink(i8*) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @assert_is_ignored(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
